test/parsing/precedence/error-new-dot.good
error-new-dot.chpl:17: error: Please use parentheses to disambiguate dot expression after new
error-new-dot.chpl:19: error: Please use parentheses to disambiguate dot expression after new
